Connect c8 (#5)
Execute and verify Camunda 8