@@ -2,13 +2,17 @@ package org.camunda.automator.bpmnengine.camunda7;
 
 import org.camunda.automator.bpmnengine.BpmnEngine;
 import org.camunda.automator.bpmnengine.BpmnEngineConfiguration;
+import org.camunda.automator.definition.ScenarioDeployment;
+import org.camunda.automator.definition.ScenarioStep;
 import org.camunda.automator.engine.AutomatorException;
+import org.camunda.community.rest.client.api.DeploymentApi;
 import org.camunda.community.rest.client.api.ExternalTaskApi;
 import org.camunda.community.rest.client.api.ProcessDefinitionApi;
 import org.camunda.community.rest.client.api.ProcessInstanceApi;
 import org.camunda.community.rest.client.api.TaskApi;
 import org.camunda.community.rest.client.dto.CompleteExternalTaskDto;
 import org.camunda.community.rest.client.dto.CompleteTaskDto;
+import org.camunda.community.rest.client.dto.DeploymentWithDefinitionsDto;
 import org.camunda.community.rest.client.dto.ExternalTaskDto;
 import org.camunda.community.rest.client.dto.ExternalTaskQueryDto;
 import org.camunda.community.rest.client.dto.LockExternalTaskDto;
@@ -26,41 +30,70 @@ import org.camunda.community.rest.client.invoker.ApiException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.io.File;
+import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+/**
+ * connection to a Camunda 7 server. This is one object created by the engine, and then one "init() " call.
+ * After, all methods are call in a multi-threads environment
+ */
 public class BpmnEngineCamunda7 implements BpmnEngine {
 
   private final Logger logger = LoggerFactory.getLogger(BpmnEngineCamunda7.class);
 
-  private final BpmnEngineConfiguration engineConfiguration;
+  private final String serverUrl;
+  private final boolean logDebug;
 
   ApiClient client = null;
   ProcessDefinitionApi processDefinitionApi;
   TaskApi taskApi;
   ExternalTaskApi externalTaskApi;
   ProcessInstanceApi processInstanceApi;
+  DeploymentApi deploymentApi;
 
-  public BpmnEngineCamunda7(BpmnEngineConfiguration engineConfiguration) {
-    this.engineConfiguration = engineConfiguration;
+  public BpmnEngineCamunda7(BpmnEngineConfiguration engineConfiguration,
+                            BpmnEngineConfiguration.BpmnServerDefinition serverDefinition) {
+    this.serverUrl = serverDefinition.serverUrl;
+    this.logDebug = engineConfiguration.logDebug;
+    init();
   }
 
   @Override
   public void init() {
     client = new ApiClient();
-    client.setBasePath(engineConfiguration.serverUrl);
+    client.setBasePath(serverUrl);
     processDefinitionApi = new ProcessDefinitionApi();
     taskApi = new TaskApi();
     externalTaskApi = new ExternalTaskApi();
     processInstanceApi = new ProcessInstanceApi();
+    deploymentApi = new DeploymentApi();
   }
+
+  /**
+   * P
+   *
+   * @param serverUrl is  "http://localhost:8080/engine-rest"
+   */
+  public BpmnEngineCamunda7(String serverUrl, boolean logDebug) {
+    this.serverUrl = serverUrl;
+    this.logDebug = logDebug;
+    init();
+  }
+
+
+  /* ******************************************************************** */
+  /*                                                                      */
+  /*  Process Instance                                                    */
+  /*                                                                      */
+  /* ******************************************************************** */
 
   @Override
   public String createProcessInstance(String processId, String starterEventId, Map<String, Object> variables)
       throws AutomatorException {
-    if (engineConfiguration.logDebug) {
+    if (logDebug) {
       logger.info("BpmnEngine7.CreateProcessInstance: Process[" + processId + "] StartEvent[" + starterEventId + "]");
     }
     Map<String, VariableValueDto> variablesApi = new HashMap<>();
@@ -78,10 +111,22 @@ public class BpmnEngineCamunda7 implements BpmnEngine {
   }
 
   @Override
-  public List<String> SearchForUserTasks(String processInstanceId, String taskName, Integer maxResult)
+  public void endProcessInstance(String processInstanceId, boolean cleanAll) throws AutomatorException {
+    // To nothing at this moment
+  }
+
+
+  /* ******************************************************************** */
+  /*                                                                      */
+  /*  User task                                                           */
+  /*                                                                      */
+  /* ******************************************************************** */
+
+  @Override
+  public List<String> searchUserTasks(String processInstanceId, String userTaskId, int maxResult)
       throws AutomatorException {
-    if (engineConfiguration.logDebug) {
-      logger.info("BpmnEngine7.searchForActivity: Process[" + processInstanceId + "] taskName[" + taskName + "]");
+    if (logDebug) {
+      logger.info("BpmnEngine7.searchForActivity: Process[" + processInstanceId + "] taskName[" + userTaskId + "]");
     }
 
     // get the list of all sub process instance
@@ -93,7 +138,7 @@ public class BpmnEngineCamunda7 implements BpmnEngine {
       taskQueryDto.addProcessInstanceIdInItem(subProcessInstance);
 
     }
-    taskQueryDto.addTaskDefinitionKeyInItem(taskName);
+    taskQueryDto.addTaskDefinitionKeyInItem(userTaskId);
     List<TaskDto> taskDtos = null;
     try {
       taskDtos = taskApi.queryTasks(0, maxResult, taskQueryDto);
@@ -104,32 +149,49 @@ public class BpmnEngineCamunda7 implements BpmnEngine {
   }
 
   @Override
-  public String executeUserTask(String taskId, String userId, Map<String, Object> variables) throws AutomatorException {
+  public void executeUserTask(String userTaskId, String userId, Map<String, Object> variables)
+      throws AutomatorException {
 
-    if (engineConfiguration.logDebug) {
-      logger.info("BpmnEngine7.executeUserTask: activityId[" + taskId + "]");
+    if (logDebug) {
+      logger.info("BpmnEngine7.executeUserTask: activityId[" + userTaskId + "]");
     }
     try {
       UserIdDto userIdDto = new UserIdDto();
       userIdDto.setUserId(userId == null ? "automator" : userId);
-      taskApi.claim(taskId, userIdDto);
+      taskApi.claim(userTaskId, userIdDto);
       Map<String, VariableValueDto> variablesApi = new HashMap<>();
       for (Map.Entry<String, Object> entry : variables.entrySet()) {
         variablesApi.put(entry.getKey(), new VariableValueDto().value(entry.getValue()));
       }
 
-      taskApi.complete(taskId, new CompleteTaskDto().variables(variablesApi));
-      return null;
+      taskApi.complete(userTaskId, new CompleteTaskDto().variables(variablesApi));
     } catch (ApiException e) {
-      throw new AutomatorException("Can't execute taskId[" + taskId + "] with userId[" + userId + "]", e);
+      throw new AutomatorException("Can't execute taskId[" + userTaskId + "] with userId[" + userId + "]", e);
     }
   }
 
+
+  /* ******************************************************************** */
+  /*                                                                      */
+  /*  Service task                                                        */
+  /*                                                                      */
+  /* ******************************************************************** */
+
+  /**
+   * Search service task
+   *
+   * @param processInstanceId processInstance
+   * @param serviceTaskId     task name
+   * @param topic topic to search the task
+   * @param maxResult         number of result
+   * @return the list of TaskId found according the criteria
+   * @throws AutomatorException any error during search
+   */
   @Override
-  public List<String> SearchForServiceTasks(String processInstanceId, String taskName, Integer maxResult)
+  public List<String> searchServiceTasks(String processInstanceId, String serviceTaskId, String topic, int maxResult)
       throws AutomatorException {
-    if (engineConfiguration.logDebug) {
-      logger.info("BpmnEngine7.searchForActivity: Process[" + processInstanceId + "] taskName[" + taskName + "]");
+    if (logDebug) {
+      logger.info("BpmnEngine7.searchForActivity: Process[" + processInstanceId + "] taskName[" + serviceTaskId + "]");
     }
 
     // get the list of all sub process instance
@@ -142,8 +204,8 @@ public class BpmnEngineCamunda7 implements BpmnEngine {
 
     }
 
-    externalTaskQueryDto.activityId(taskName);
-    List<ExternalTaskDto> taskDtos = null;
+    externalTaskQueryDto.activityId(serviceTaskId);
+    List<ExternalTaskDto> taskDtos;
     try {
       taskDtos = externalTaskApi.queryExternalTasks(0, 100, externalTaskQueryDto);
     } catch (ApiException e) {
@@ -153,17 +215,17 @@ public class BpmnEngineCamunda7 implements BpmnEngine {
   }
 
   @Override
-  public String executeServiceTask(String taskId, String userId, Map<String, Object> variables)
+  public void executeServiceTask(String serviceTaskId, String userId, Map<String, Object> variables)
       throws AutomatorException {
 
-    if (engineConfiguration.logDebug) {
-      logger.info("BpmnEngine7.executeUserTask: activityId[" + taskId + "]");
+    if (logDebug) {
+      logger.info("BpmnEngine7.executeUserTask: activityId[" + serviceTaskId + "]");
     }
     try {
 
       // Fetch and lock
       String workerId = getUniqWorkerId();
-      externalTaskApi.lock(taskId, new LockExternalTaskDto().workerId(workerId).lockDuration(10000L));
+      externalTaskApi.lock(serviceTaskId, new LockExternalTaskDto().workerId(workerId).lockDuration(10000L));
 
       Map<String, VariableValueDto> variablesApi = new HashMap<>();
       for (Map.Entry<String, Object> entry : variables.entrySet()) {
@@ -171,26 +233,114 @@ public class BpmnEngineCamunda7 implements BpmnEngine {
       }
 
       ExternalCallBack externalCallBack = new ExternalCallBack();
-      externalTaskApi.completeExternalTaskResourceAsync(taskId,
+      externalTaskApi.completeExternalTaskResourceAsync(serviceTaskId,
           new CompleteExternalTaskDto().variables(variablesApi).workerId(workerId), externalCallBack);
+
       int counter = 0;
       while (ExternalCallBack.STATUS.WAIT.equals(externalCallBack.status) && counter < 200) {
+        counter++;
         try {
           Thread.sleep(200);
         } catch (InterruptedException e) {
+          // we don't care
         }
       }
       if (!ExternalCallBack.STATUS.SUCCESS.equals(externalCallBack.status)) {
-        throw new AutomatorException("Can't execute taskId[" + taskId + "] - answer[" + externalCallBack.status + "]");
+        throw new AutomatorException(
+            "Can't execute taskId[" + serviceTaskId + "] - answer[" + externalCallBack.status + "]");
       }
-      return null;
     } catch (ApiException e) {
-      throw new AutomatorException("Can't execute taskId[" + taskId + "] with userId[" + userId + "]", e);
+      throw new AutomatorException("Can't execute taskId[" + serviceTaskId + "] with userId[" + userId + "]", e);
     }
   }
 
+
+
+  /* ******************************************************************** */
+  /*                                                                      */
+  /*  Generic task                                                        */
+  /*                                                                      */
+  /* ******************************************************************** */
+
+  @Override
+  public List<TaskDescription> searchTasksByProcessInstanceId(String processInstanceId, String taskId, int maxResult)
+      throws AutomatorException {
+    // get the list of all sub process instance
+    List<String> listProcessInstance = getListSubProcessInstance(processInstanceId);
+
+    TaskQueryDto taskQueryDto = new TaskQueryDto();
+    taskQueryDto.addProcessInstanceIdInItem(processInstanceId);
+    for (String subProcessInstance : listProcessInstance) {
+      taskQueryDto.addProcessInstanceIdInItem(subProcessInstance);
+
+    }
+    taskQueryDto.addTaskDefinitionKeyInItem(taskId);
+    List<TaskDto> taskDtos = null;
+    try {
+      taskDtos = taskApi.queryTasks(0, maxResult, taskQueryDto);
+    } catch (ApiException e) {
+      throw new AutomatorException("Can't searchTask", e);
+    }
+    List<TaskDescription> taskList = taskDtos.stream().map(t -> {
+      TaskDescription taskDescription = new TaskDescription();
+      taskDescription.taskId = t.getName();
+      taskDescription.type = ScenarioStep.Step.USERTASK;
+      taskDescription.isCompleted = true;
+      return taskDescription;
+    }).toList();
+    return taskList;
+  }
+
+  @Override
+  public List<ProcessDescription> searchProcessInstanceByVariable(String processId,
+                                                                  Map<String, Object> filterVariables, int maxResult) throws AutomatorException {
+    return null;
+  }
+
+  @Override
+  public Map<String, Object> getVariables(String processInstanceId) throws AutomatorException {
+    return null;
+  }
+
+
+  /* ******************************************************************** */
+  /*                                                                      */
+  /*  Deployment                                                          */
+  /*                                                                      */
+  /* ******************************************************************** */
+
+  @Override
+  public String deployBpmn(File processFile, ScenarioDeployment.Policy policy) throws AutomatorException {
+    try {
+      DeploymentWithDefinitionsDto deploymentSource = deploymentApi.createDeployment(null, // tenantId
+          null, // deploymentSource
+          ScenarioDeployment.Policy.ONLYNOTEXIST.equals(policy), // deployChangedOnly,
+          Boolean.TRUE, // enableDuplicateFiltering,
+          processFile.getName(), // String deploymentName,
+          new Date(), //deploymentActivationTime,
+          processFile);
+      return deploymentSource.getId();
+    } catch (ApiException e) {
+      throw new AutomatorException("Can't deploy process ", e);
+    }
+
+  }
+
+
+
+  /* ******************************************************************** */
+  /*                                                                      */
+  /*  get server definition                                               */
+  /*                                                                      */
+  /* ******************************************************************** */
+
+  @Override
+  public BpmnEngineConfiguration.CamundaEngine getServerDefinition() {
+    return BpmnEngineConfiguration.CamundaEngine.CAMUNDA_7;
+  }
+
   /**
-   * Call back asynchrone
+   * Call back asynchronous
    */
   public class ExternalCallBack implements ApiCallback {
 
@@ -228,19 +378,19 @@ public class BpmnEngineCamunda7 implements BpmnEngine {
   /**
    * Collect all subprocess for a process instance
    *
-   * @param rootProcessInstance
-   * @return
-   * @throws AutomatorException
+   * @param rootProcessInstance root process instance
+   * @return list of SubProcess ID
+   * @throws AutomatorException if any errors arrive
    */
   private List<String> getListSubProcessInstance(String rootProcessInstance) throws AutomatorException {
     ProcessInstanceQueryDto processInstanceQueryDto = new ProcessInstanceQueryDto();
     processInstanceQueryDto.superProcessInstance(rootProcessInstance);
-    List<ProcessInstanceDto> processInstanceDtos = null;
+    List<ProcessInstanceDto> processInstanceDtos;
     try {
       processInstanceDtos = processInstanceApi.queryProcessInstances(0, 100000, processInstanceQueryDto);
     } catch (ApiException e) {
       throw new AutomatorException("Can't searchSubProcess", e);
     }
-    return processInstanceDtos.stream().map(ProcessInstanceDto::getId).collect(Collectors.toList());
+    return processInstanceDtos.stream().map(ProcessInstanceDto::getId).toList();
   }
 }
